force-app/main/default/objects/CommercientSF__ArCustomer__c/CommercientSF__ArCustomer__c.object-meta.xml
<CustomObject>
    <description>ArCustomer table for Syspro and Commercient integration</description>
    <label>Syspro Customer Record</label>
    <nameField>
        <label>Syspro Customer Record</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Syspro Customer Record</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>