force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/Amount_Owed_Syspro__c.field-meta.xml
<CustomField>
    <fullName>Amount_Owed_Syspro__c</fullName>
    <label>Amount_Owed_Syspro</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>