force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__AccountID__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AccountID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links to the Account table</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>ArCustomers</relationshipName>
    <type>Lookup</type>
</CustomField>