force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__AddTelephone__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__AddTelephone__c</fullName>
    <label>Extra telephone number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>