force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__ApplyLineDisc__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ApplyLineDisc__c</fullName>
    <label>Apply line disc by prod class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>