force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__ApplyOrdDisc__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ApplyOrdDisc__c</fullName>
    <label>Apply order discount based</label>
    <length>255</length>
    <type>Text</type>
</CustomField>