force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__ArCustomer_Code__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ArCustomer_Code__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>ArCustomer Code</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>