force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__ArStatementNo__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ArStatementNo__c</fullName>
    <label>Default statement format</label>
    <length>255</length>
    <type>Text</type>
</CustomField>