force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__BackOrdReqd__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__BackOrdReqd__c</fullName>
    <label>Back orders allowed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>