force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__BalanceType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__BalanceType__c</fullName>
    <label>Statement print type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>