force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__BuyingGroup1__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__BuyingGroup1__c</fullName>
    <label>Contract buying group 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>