force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__BuyingGroup3__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__BuyingGroup3__c</fullName>
    <label>Contract buying group 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>