force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__City1__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__City1__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>