force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__CompanyTaxNumber__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CompanyTaxNumber__c</fullName>
    <label>CompanyTaxNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>