force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__Contact__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Contact__c</fullName>
    <label>Contact name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>