force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__ContractPrcReqd__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ContractPrcReqd__c</fullName>
    <label>Contract pricing required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>