force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__CountyZip1__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CountyZip1__c</fullName>
    <label>County or Zip code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>