force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__CreditCheckFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CreditCheckFlag__c</fullName>
    <label>Credit checking method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>