force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__CreditLimit__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CreditLimit__c</fullName>
    <label>Credit limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>