force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__CreditStatus__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CreditStatus__c</fullName>
    <label>Credit status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>