force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__CustomerOnHold__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CustomerOnHold__c</fullName>
    <label>Customer on hold flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>