force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__CustomerType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__CustomerType__c</fullName>
    <label>Customer type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>