force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__DateCustAdded__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DateCustAdded__c</fullName>
    <label>Date customer added</label>
    <type>DateTime</type>
</CustomField>