force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__DateLastPay__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DateLastPay__c</fullName>
    <label>Date of last payment</label>
    <type>DateTime</type>
</CustomField>