force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__DateLastSale__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DateLastSale__c</fullName>
    <label>Date of last sale</label>
    <type>DateTime</type>
</CustomField>