force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__DefaultOrdType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DefaultOrdType__c</fullName>
    <label>Default sales order type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>