force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__DeliveryTermsC__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DeliveryTermsC__c</fullName>
    <label>Delivery terms (credits)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>