force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__DocFax__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DocFax__c</fullName>
    <label>Fax number for faxing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>