force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__DocFaxContact__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__DocFaxContact__c</fullName>
    <label>Fax contact name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>