force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__Email__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Email__c</fullName>
    <label>Customer e-mail address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>