force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__ExemptFinChg__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ExemptFinChg__c</fullName>
    <label>Exempt from finance charges</label>
    <length>255</length>
    <type>Text</type>
</CustomField>