force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__Fax__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Fax__c</fullName>
    <label>Fax number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>