force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__FaxInvoices__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__FaxInvoices__c</fullName>
    <label>Fax invoices</label>
    <length>255</length>
    <type>Text</type>
</CustomField>