force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__FaxQuotes__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__FaxQuotes__c</fullName>
    <label>Fax quotes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>