force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__FaxStatements__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__FaxStatements__c</fullName>
    <label>Fax statememts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>