force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__GstExemptFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GstExemptFlag__c</fullName>
    <label>GST exempt code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>