force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__GstLevel__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__GstLevel__c</fullName>
    <label>Show GST Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>