force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__HighestBalance__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__HighestBalance__c</fullName>
    <label>Highest balance attained</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>