force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__InvDiscCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InvDiscCode__c</fullName>
    <label>Invoice discount code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>