force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__InvoiceCount__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__InvoiceCount__c</fullName>
    <label>Number of invoices</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>