force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__LineDiscCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__LineDiscCode__c</fullName>
    <label>Invoice line discount code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>