force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__MaintHistory__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MaintHistory__c</fullName>
    <label>Retain Sales history flag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>