force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__MaintLastPrcPaid__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MaintLastPrcPaid__c</fullName>
    <label>MaintLastPrcPaid</label>
    <length>255</length>
    <type>Text</type>
</CustomField>