force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__MasterAccount__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MasterAccount__c</fullName>
    <label>Master account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>