force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__MinimumOrderChgCod__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MinimumOrderChgCod__c</fullName>
    <label>MinimumOrderChgCod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>