force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__MinimumOrderValue__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__MinimumOrderValue__c</fullName>
    <label>MinimumOrderValue</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>