force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__Name__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Name__c</fullName>
    <label>Customer name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>