force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__NumOutstOrd__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__NumOutstOrd__c</fullName>
    <label>Number of outstanding s/orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>