force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__OutstOrdVal__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__OutstOrdVal__c</fullName>
    <label>Outstanding order value</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>