force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__PaymentStatus__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PaymentStatus__c</fullName>
    <label>Payments status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>