force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__PriceCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__PriceCode__c</fullName>
    <label>Automatic price / disc code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>