force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__RouteCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__RouteCode__c</fullName>
    <label>Default route code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>