force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__RouteDistance__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__RouteDistance__c</fullName>
    <label>Distance or sequence on route</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>