force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__SalArea__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SalArea__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Syspro Area</label>
    <referenceTo>CommercientSF__SalArea__c</referenceTo>
    <relationshipLabel>Syspro Customer Record</relationshipLabel>
    <relationshipName>Syspro_Customer_Record</relationshipName>
    <type>Lookup</type>
</CustomField>