force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__Salesperson2__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Salesperson2__c</fullName>
    <label>Salesperson 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>