force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__Salesperson3__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Salesperson3__c</fullName>
    <label>Salesperson 3</label>
    <length>255</length>
    <type>Text</type>
</CustomField>