force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__SalesWarehouse__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SalesWarehouse__c</fullName>
    <label>Default warehouse for sales</label>
    <length>255</length>
    <type>Text</type>
</CustomField>