force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__ShipToAddr1__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ShipToAddr1__c</fullName>
    <label>1st line ship to address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>