force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__ShipToAddr2__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ShipToAddr2__c</fullName>
    <label>2nd line ship to address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>