force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__ShortName__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__ShortName__c</fullName>
    <label>Short name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>