force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__SoDefaultDoc__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SoDefaultDoc__c</fullName>
    <label>Default order entry document</label>
    <length>255</length>
    <type>Text</type>
</CustomField>