force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__SoDefaultType__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SoDefaultType__c</fullName>
    <label>Default type of sales order</label>
    <length>255</length>
    <type>Text</type>
</CustomField>