force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__SoldPostalCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SoldPostalCode__c</fullName>
    <label>Postal/Zip code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>