force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__SoldToAddr3__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__SoldToAddr3__c</fullName>
    <label>3rd line sold to address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>