force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__State1__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__State1__c</fullName>
    <label>State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>