force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__StateCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__StateCode__c</fullName>
    <label>State, province or county</label>
    <length>255</length>
    <type>Text</type>
</CustomField>