force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__StatementReqd__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__StatementReqd__c</fullName>
    <label>Statement required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>