force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__StoreNumber__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__StoreNumber__c</fullName>
    <label>Sub account store number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>