force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__TaxExemptNumber__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TaxExemptNumber__c</fullName>
    <label>Tax exemption number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>