force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__TaxStatus__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TaxStatus__c</fullName>
    <label>Tax exemption status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>