force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__Telephone__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__Telephone__c</fullName>
    <label>Telephone number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>