force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__TelephoneExtn__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TelephoneExtn__c</fullName>
    <label>Telephone extension number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>