force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__TermsCode__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TermsCode__c</fullName>
    <label>Invoice terms code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>