force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__TpmCreditCheck__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TpmCreditCheck__c</fullName>
    <label>TPM credit checking required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>