force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__TpmPricingFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__TpmPricingFlag__c</fullName>
    <label>TPM pricing required</label>
    <length>255</length>
    <type>Text</type>
</CustomField>