force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__UserField1__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__UserField1__c</fullName>
    <label>User-defined field 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>