force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__UserField2__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__UserField2__c</fullName>
    <label>User-defined field 2</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>