force-app/main/default/objects/CommercientSF__ArCustomer__c/fields/CommercientSF__WholeOrderShipFlag__c.field-meta.xml
<CustomField>
    <fullName>CommercientSF__WholeOrderShipFlag__c</fullName>
    <label>WholeOrderShipFlag</label>
    <length>255</length>
    <type>Text</type>
</CustomField>